--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %} {% block content %}
+{% extends 'layouts/base.html' %} {% block content %}
 
 <div class="container">
   <div class="row">
@@ -12,7 +12,7 @@
         <p class="card-text ">{{ object.content | safe }}</p>
       </div>
     </div>
-    {% block sidebar %} {% include 'sidebar.html' %} {% endblock sidebar %}
+    {% block sidebar %} {% include 'layouts/sidebar.html' %} {% endblock sidebar %}
   </div>
 </div>
 
