--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -1,68 +1,75 @@
 <!DOCTYPE html>
 <html>
-
+    {% load static %}
     <head>
         <title>Intelli Fund Django Blog Engine</title>
-        <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
         <meta name="google" content="notranslate" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-            crossorigin="anonymous" />
+        <meta charset="utf-8">
+        <meta content="width=device-width, initial-scale=1.0" name="viewport">
+
+        <title>Blog Single - Tempo Bootstrap Template</title>
+        <meta content="" name="description">
+        <meta content="" name="keywords">
+
+        <!-- Favicons -->
+        <link href="{% static '/img/favicon.png' %}" rel="icon">
+        <link href="{% static '/img/apple-touch-icon.png' %}" rel="apple-touch-icon">
+
+        <!-- Vendor CSS Files -->
+        <link href="{% static '/vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
+        <link href="{% static '/vendor/bootstrap-icons/bootstrap-icons.css' %}" rel="stylesheet">
+
+        <!-- Template Main CSS File -->
+        <link href="{% static '/css/style.css' %}" rel="stylesheet">
     </head>
 
     <body>
-        <style>
-            body {
-            font-family: "Roboto", sans-serif;
-            font-size: 17px;
-            background-color: #fdfdfd;
-        }
-        .shadow {
-            box-shadow: 0 4px 2px -2px rgba(0, 0, 0, 0.1);
-        }
-        .btn-danger {
-            color: #fff;
-            background-color: #f00000;
-            border-color: #dc281e;
-        }
-        .masthead {
-            background: #3398E1;
-            height: auto;
-            padding-bottom: 15px;
-            box-shadow: 0 16px 48px #E3E7EB;
-            padding-top: 10px;
-        }
-    </style>
-
         <!-- Navigation -->
-        <nav class="navbar navbar-expand-lg navbar-light bg-light shadow" id="mainNav">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="{% url 'home' %}">Intelli Fund Django Blog Engine</a>
-                <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive"
-                    aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarResponsive">
-                    <ul class="navbar-nav ml-auto">
-                        <li class="nav-item text-black">
-                            <a class="nav-link text-black font-weight-bold" href="#">About</a>
-                        </li>
-                        <li class="nav-item text-black">
-                            <a class="nav-link text-black font-weight-bold" href="#">Policy</a>
-                        </li>
-                        <li class="nav-item text-black">
-                            <a class="nav-link text-black font-weight-bold" href="#">Contact</a>
-                        </li>
-                    </ul>
-                </div>
+
+    <nav class="navbar navbar-expand-lg border-bottom">
+        <div class="container-fluid align-items-center justify-content-between">
+            <div class="col">
+              <a class="navbar-brand" href="#">Navbar</a>
             </div>
+            <div class="col text-center">
+              <h4>Australian Property Market</h4>
+            </div>
+            <div class="col">
+              <form class="d-flex justify-content-end" role="search">
+                  <!-- <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"> -->
+                  <button type="button" class="btn" style="background-color: #fd7e14; color: #fff; font-size: 13px;">Subscribe</button>
+                  <button type="button" class="btn text-nowrap" style="font-size: 13px;">Sign in</button>
+              </form>
+            </div>
+        </div>
+    </nav>
+    <div class="container-fluid d-flex border-bottom align-items-center justify-content-center p-0 m-0">
+        <nav class="navbar text-center p-0 pt-2">
+            <ul class="nav nav-underline" id="myTab" role="tablist">
+                <li class="nav-item" role="presentation">
+                  <button class="nav-link active fs-6 fw-light" id="home-tab" data-bs-toggle="tab" data-bs-target="#home-tab-pane" type="button" role="tab" aria-controls="home-tab-pane" aria-selected="true">Home</button>
+                </li>
+                <li class="nav-item" role="presentation">
+                  <button class="nav-link fs-6 fw-light" id="archive-tab" data-bs-toggle="tab" data-bs-target="#archive-tab-pane" type="button" role="tab" aria-controls="archive-tab-pane" aria-selected="false">Archive</button>
+                </li>
+                <li class="nav-item" role="presentation">
+                  <button class="nav-link fs-6 fw-light" id="about-tab" data-bs-toggle="tab" data-bs-target="#about-tab-pane" type="button" role="tab" aria-controls="about-tab-pane" aria-selected="false">About</button>
+                </li>
+            </ul>
         </nav>
+    </div>
         {% block content %}
         <!-- Content Goes here -->
         {% endblock content %}
         <!-- Footer -->
-        <footer class="py-3 bg-grey">
-            <p class="m-0 text-dark text-center ">Copyright &copy; Itelli Fund </p>
+        <footer class="container-fluid border-top" style="background-color: #ebebebff;">
+            <script src="{% static '/vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
+            <div class="d-flex justify-content-center align-item-center py-3">
+                <p style="color: #8c8c8cff; font-size: 13px;">
+                    © 2023 Australian Property Market . <a href="#" style="color: #8c8c8cff;">Privacy</a> . <a href="#" style="color: #8c8c8cff;">Terms</a> . <a href="#" style="color: #8c8c8cff;">Collection notice</a>
+                </p>
+            </div>
         </footer>
     </body>
 </html>
