--- a/templates/blog.html
+++ b/templates/blog.html
@@ -1,6 +1,21 @@
 {% extends "layouts/base.html" %}
 
 {% block content %}
+    <div class="container-fluid d-flex border-bottom align-items-center justify-content-center p-0 m-0">
+        <nav class="navbar text-center p-0 pt-2">
+            <ul class="nav nav-underline" id="myTab" role="tablist">
+                <li class="nav-item" role="presentation">
+                  <button class="nav-link active fs-6 fw-light" id="home-tab" data-bs-toggle="tab" data-bs-target="#home-tab-pane" type="button" role="tab" aria-controls="home-tab-pane" aria-selected="true">Home</button>
+                </li>
+                <li class="nav-item" role="presentation">
+                  <button class="nav-link fs-6 fw-light" id="archive-tab" data-bs-toggle="tab" data-bs-target="#archive-tab-pane" type="button" role="tab" aria-controls="archive-tab-pane" aria-selected="false">Archive</button>
+                </li>
+                <li class="nav-item" role="presentation">
+                  <button class="nav-link fs-6 fw-light" id="about-tab" data-bs-toggle="tab" data-bs-target="#about-tab-pane" type="button" role="tab" aria-controls="about-tab-pane" aria-selected="false">About</button>
+                </li>
+            </ul>
+        </nav>
+    </div>
     <div class="tab-content" id="myTabContent">
         <div class="tab-pane fade show active" id="home-tab-pane" role="tabpanel" aria-labelledby="home-tab" tabindex="0">
             <div class="container py-4 border-bottom">
