--- a/templates/blog_detail.html
+++ b/templates/blog_detail.html
@@ -6,7 +6,7 @@
     <section id="breadcrumbs" class="breadcrumbs py-3">
       <div class="container">
         <ol>
-          <li><a href="#">Home</a></li>
+          <li><a href="{% url 'blog_home' %}">Home</a></li>
           <li><a href="{% url 'blog_home' %}">Blog</a></li>
           <li>{{ object.slug}}</li>
         </ol>
