--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -2,15 +2,20 @@
 <html>
     {% load static %}
     <head>
-        <title>Intelli Fund Django Blog Engine</title>
         <meta name="google" content="notranslate" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta charset="utf-8">
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-        <title>Blog Single - Tempo Bootstrap Template</title>
-        <meta content="" name="description">
+        {% if object %}
+        <title>{{ object.title }}</title>
+        {% else %}
+        <title>Intelli Fund Django Blog Engine</title>
+        {% endif %}
+        <meta content="{% if object.description %} {{object.description}} {% endif %}" name="description">
+
         <meta content="" name="keywords">
+
 
         <!-- Favicons -->
         <link href="{% static '/img/favicon.png' %}" rel="icon">
